--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     margin-left: 0;
     margin-top: 0;
+    height: 100%;
+    width: 100%;
 }
 .leftSide{
         width: 50%;
@@ -76,7 +78,7 @@ span{
     color: aliceblue;
 }
 h3{
-    font-family: 'Times New Roman', Times, serif;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: inline;
     font-weight: block;
 }
@@ -108,4 +110,13 @@ h1{
 .name{
     font-size: 3rem;
 }
+/* #list{
+height: 30px;
+border-radius: 10px;
+position: relative;
+/* border: 2px solid #cdcdcd; */
+/* border-color: rgba(0, 0, 0, .14);
+background-color: AliceBlue;
+font-size: 14px;
 
+} */ 
