api call reduced

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h2{
 }
 span{
     color: aliceblue;
+
 }
 h3{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -89,6 +90,7 @@ h3{
     margin:0;
     padding:0;
     cursor: pointer;
+    
 }
 #fahrenheit{
     background:none;
@@ -97,16 +99,16 @@ h3{
     padding:0;
     cursor: pointer;
 }
-#celcius:active {
+/* #celcius:active {
     background-color:rgb(87, 183, 221);
-    box-shadow: 0 5px gray;
+    box-shadow: 0 5px rgb(71, 139, 241);
     transform: translateY(2px);
  }
  #fahrenheit:active {
     background-color:rgb(87, 183, 221);
     box-shadow: 0 5px gray;
     transform: translateY(2px);
- }
+ } */
 #showWeather,#weatherName
 {
     display:inline;
@@ -122,13 +124,14 @@ h1{
 }
 #list{
 
-        background:#FFFFFF url("search.png") no-repeat 4px 4px;
+        background:#FFFFFF url("search.png") no-repeat 4px;
         padding:4px 4px 4px 22px;
         border:2px solid #456879;
 	    border-radius:10px;
         width:230px;
         height:18px;
-} 
+}
+
 #icon{
     size:20;
     height: 30px;
